// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInstanceDocumentHandler applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": {
    "myData": 1,
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts66jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "myData": 0,
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1647037687,
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies deterministic genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {},
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqceravogecfyp4jyciu7cqljixlpymtmisoxikuxyzikxkups6afcncha",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "myData": 0,
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies genesis commit correctly with small allowable content length 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "myData": "abcdefghijk",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts77jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqceravogecfyp4jyciu7cqljixlpymtmisoxikuxyzikxkups6afcnchq",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies signed commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "myData": 1,
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler multiple consecutive updates 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "myData": 2,
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;
